# PersonalWebsiteRust

./: .env  .gitignore  Cargo.toml  README.md  Rocket.toml  posts.db
.github/workflows/: rust.yml
migrations/2020-12-01-175202_create_posts/: down.sql  up.sql
src/: db.rs  lib.rs  main.rs
src/admin/: mod.rs  post_handling.rs
src/db/: mod.rs  models.rs  schema.rs
static/css/: font-awesome.css  skeleton.css
templates/: base.html.tera  blog.html.tera  footer.html.tera  home.html.tera  navbar.html.tera  post.html.tera  postitem.html.tera  research.html.tera  resume.html.tera  resume_content.html.tera
