[package]
name = "personal-website-rust"
version = "0.1.0"
authors = ["Alex Veltman <alexveltman@protonmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
serde = { version = "1.0", features = ["derive"] }


[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["tera_templates"]
