[package]
name = "personal-website-rust"
version = "0.1.0"
authors = ["Alex Veltman <alexveltman@protonmail.com>"]
edition = "2018"

[dependencies]
rocket = "0.4.6"
diesel = { version = "^1.1.0", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"

[dependencies.rocket_contrib]
version = "0.4.6"
default-features = false
features = ["serve", "tera_templates"]
