[package]
name = "personal-website-rust"
version = "0.1.0"
authors = ["Alex Veltman <alexveltman@protonmail.com>"]
edition = "2021"

[dependencies]
rocket = "0.5.0-rc.2"
rocket_dyn_templates = { version = "0.1.0-rc.2", features = ["tera"] }
diesel = { version = "1.4.4", features = ["sqlite", "chrono"] }
dotenv = "0.15.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
comrak = "0.9"
clap = "2"
